--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -10,6 +10,7 @@ jobs:
       contents: write
       pull-requests: write
       repository-projects: write
+      actions: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
