--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -6,11 +6,11 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      repository-projects: write
-      actions: write
+    permissions: write-all
+      # contents: write
+      # pull-requests: write
+      # repository-projects: write
+      # actions: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
