--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -18,7 +18,9 @@ jobs:
           fetch-depth: 0
 
       - name: Sync repository with the upstream
-        run: DEBUG=1 gh repo sync $REPOSITORY -b $BRANCH_NAME
+        run: |
+          gh auth refresh -s workflow
+          DEBUG=1 gh repo sync $REPOSITORY -b $BRANCH_NAME
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
