--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -6,9 +6,9 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
-    permissions: write-all
-      # contents: write
-      # pull-requests: write
+    permissions:
+      contents: write
+      pull-requests: write
       # repository-projects: write
       # actions: write
     steps:
@@ -19,8 +19,7 @@ jobs:
 
       - name: Sync repository with the upstream
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
-          DEBUG=1 gh repo sync $REPOSITORY -b $BRANCH_NAME
+          DEBUG=1 gh repo sync $REPOSITORY -b $BRANCH_NAME --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
