--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Sync repository with the upstream
         run: |
+          sudo apt-get install gh -y
           DEBUG=1 gh repo sync $REPOSITORY -b $BRANCH_NAME --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
