--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -17,9 +17,13 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up GitHub CLI
+        uses: cli/gh-actions@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Sync repository with the upstream
         run: |
-          sudo apt-get install gh -y
           DEBUG=1 gh repo sync $REPOSITORY -b $BRANCH_NAME --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
