--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -21,6 +21,13 @@ jobs:
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
 
+      - name: Debug Environment
+        run: |
+          gh auth status
+          gh repo view myorg/aries-acapy-plugins --json name,owner
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Sync repository with the upstream
         run: |
           DEBUG=1 gh repo sync $REPOSITORY -b $BRANCH_NAME --force
