--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -39,7 +39,10 @@ jobs:
 
       - name: Send notification on sync failure
         if: failure()
-        uses: ./.github/workflows/actions/send-slack-notification
+        uses: ongov/odcp-actions/send-slack-notification@v2
         with:
-          slack_notification: "Unable to sync the repository with its upstream. See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} for more information."
+          python_version: 3.12.6
+          message: "Unable to sync the repository with its upstream. See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} for more information."
+          message_type: "text"
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+
