--- a/oid4vc/pyproject.toml
+++ b/oid4vc/pyproject.toml
@@ -30,6 +30,7 @@ aiohttp-cors = "^0.7.0"
 marshmallow = "^3.20.1"
 jsonschema = "^4.23.0"
 jsonpath = "^0.82.2"
+bitarray = "^3.1.0"
 cbor2 = { version = "~5", optional = true }
 cbor-diag = { version = "*", optional = true }
 cwt = { version = "~2", optional = true }
