--- a/status_list/pyproject.toml
+++ b/status_list/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.12"
 acapy-agent = { version = "~1.3.0", optional = true }
 
 bitarray = "^3.0.0"
+filelock = "^3.18.0"
 
 [tool.poetry.extras]
 aca-py = ["acapy-agent"]
