--- a/oid4vc/pyproject.toml
+++ b/oid4vc/pyproject.toml
@@ -40,7 +40,7 @@ jsonpointer = { version = "^3.0.0", optional = true }
 [tool.poetry.extras]
 aca-py = ["acapy-agent"]
 mso_mdoc = ["cbor2", "cbor-diag", "cwt", "pycose"]
-sd_jwt = ["jsonpointer"]
+sd_jwt_vc = ["jsonpointer"]
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.11.4"
