add /nonce route, rename m2m to internal
Signed-off-by: Ivan Wei <ivan.wei@ontario.ca>

--- a/oid4vc/auth_server/.vscode/launch.json
+++ b/oid4vc/auth_server/.vscode/launch.json
@@ -16,6 +16,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
+            "envFile": "${workspaceFolder}/.env.admin",
             "args": [
                 "admin.main:app",
                 "--host",
@@ -33,6 +34,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
+            "envFile": "${workspaceFolder}/.env.tenant",
             "args": [
                 "tenant.main:app",
                 "--host",
