--- a/oid4vc/auth_server/pyproject.toml
+++ b/oid4vc/auth_server/pyproject.toml
@@ -3,11 +3,7 @@ name = "auth-server"
 version = "0.1.0"
 description = "Standalone Authorization Server for OID4VCI"
 authors = ["Ivan Wei <ivan.wei@ontario.ca>"]
-packages = [
-    { include = "admin" },
-    { include = "tenant" },
-    { include = "core" },
-]
+packages = [{ include = "admin" }, { include = "tenant" }, { include = "core" }]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -15,7 +11,7 @@ orjson = "^3.11.2"
 fastapi = "^0.116"
 uvicorn = { extras = ["standard"], version = "^0.35" }
 authlib = "^1.6"
-SQLAlchemy = "^2.0"
+SQLAlchemy = { version = "^2.0", extras = ["asyncio"] }
 asyncpg = "^0.30"
 psycopg = { extras = ["binary"], version = "^3.2.9" }
 pydantic-settings = "^2.10"
