enable private_key_jwt auth

--- a/oid4vc/auth_server/resources/.env.admin.example
+++ b/oid4vc/auth_server/resources/.env.admin.example
@@ -14,7 +14,21 @@ ADMIN_INTERNAL_AUTH_TOKEN=******
 # ADMIN_KEY_ENC_SECRETS={"1":"<base64url-key>"}
 # ADMIN_KEY_ENC_VERSION=1
 
-# CORS (optional)
+# Optional: CORS settings
 # ADMIN_CORS_ALLOW_ORIGINS=*
 # ADMIN_CORS_ALLOW_METHODS=GET,POST,PATCH,DELETE,OPTIONS
 # ADMIN_CORS_ALLOW_HEADERS=Authorization,Content-Type
+# ADMIN_CORS_ALLOW_CREDENTIALS=false
+
+# Optional: Application metadata
+# ADMIN_APP_ROOT_PATH=
+# ADMIN_APP_TITLE=OAuth 2.0 Authorization Server Admin API
+# ADMIN_APP_VERSION=0.1.0
+# ADMIN_OPENAPI_URL=
+
+# Optional: Tenant DB config
+# ADMIN_TENANT_DB_NAME=auth_server_tenant
+# ADMIN_TENANT_DB_SCHEMA=auth
+
+# Optional: Key verification grace period (in seconds)
+# ADMIN_KEY_VERIFY_GRACE_TTL=604800
