--- a/oid4vc/auth_server/pyproject.toml
+++ b/oid4vc/auth_server/pyproject.toml
@@ -23,9 +23,10 @@ structlog = "^25.4.0"
 alembic = "^1.16.4"
 sqlacodegen-v2 = "^0.1.4"
 pytest = "^8.3"
-pytest-asyncio = "^0.23"
+pytest-asyncio = "^1.1"
+pytest-cov = "^6.0"
 coverage = "^7.6"
-ruff = "^0.6"
+ruff = "^0.13"
 
 [tool.ruff]
 line-length = 90
